fix: build jar inside Docker